manifests/modela-system/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: modela-api-ingress
  namespace: modela-system
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/proxy-body-size: 8m
    nginx.org/proxy-connect-timeout: 30s
    nginx.org/proxy-read-timeout: 20s
    nginx.org/client-max-body-size: 50m
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "x-user-agent,x-grpc-web,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "modela-ingress-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: modela-api-gateway.vcap.me
      http:
        paths:
          - pathType: Prefix
            path: /(/|$)(.*)
            backend:
              service:
                name: modela-api-gateway
                port:
                  number: 8080
  tls:
  - hosts:
    - modela-api-gateway.vcap.me
    secretName: modela-api-tls
